{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 70,
  "lineage": "6168f281-b116-b1fe-4d4a-d46a4fdee206",
  "resources": [
    {
      "module": "module.active-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-03571c1ced6474f06",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03571c1ced6474f06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-06f7e0d5ee7552c01",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f7e0d5ee7552c01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2"
            },
            "tags_all": {
              "Name": "ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb/67cfb655767b6aef",
            "arn_suffix": "app/redes-alb/67cfb655767b6aef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "redes-alb-23436598.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb/67cfb655767b6aef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "redes-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03571c1ced6474f06",
              "sg-0c8e5c7b1b14dc37a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cd183e85bb376bd2"
              },
              {
                "subnet_id": "subnet-0df1bafb42136a890"
              }
            ],
            "subnets": [
              "subnet-0cd183e85bb376bd2",
              "subnet-0df1bafb42136a890"
            ],
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.active-network.aws_security_group.alb",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_security_group.this",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:listener/app/redes-alb/67cfb655767b6aef/b6cf3c6c6b7c3140",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:listener/app/redes-alb/67cfb655767b6aef/b6cf3c6c6b7c3140",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:loadbalancer/app/redes-alb/67cfb655767b6aef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.aws_security_group.alb",
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_lb.this",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.alb.aws_security_group.this",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
            "arn_suffix": "targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-20230607235909617700000006",
            "name_prefix": "api-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-"
            },
            "tags_all": {
              "Name": "api-"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347-20230607235913337000000007",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
            "target_id": "i-04efd8dfd06978df6"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_lambda_permission.lb",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "0.instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347-20230607235913733300000008",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:501268445310:targetgroup/api-20230607235909617700000006/ebb79ae85a572347",
            "target_id": "i-025c553704210662e"
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.alb.aws_lambda_permission.lb",
            "module.active-network.module.alb.aws_lb_target_group.main",
            "module.active-network.module.ec2-api.aws_instance.this",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.local_file.ssh_key",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.active-network.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:security-group/sg-0c8e5c7b1b14dc37a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c8e5c7b1b14dc37a",
            "ingress": [],
            "name": "redes-alb-20230607235600049700000001",
            "name_prefix": "redes-alb-",
            "owner_id": "501268445310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redes-alb"
            },
            "tags_all": {
              "Name": "redes-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ec2-api[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c503d55a14d7a5f0",
            "arn": "arn:aws:ec2:us-east-1:501268445310:instance/i-04efd8dfd06978df6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04efd8dfd06978df6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-0_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8fd0b7460601c6a",
            "private_dns": "ip-10-0-0-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.164",
            "public_ip": "54.91.16.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:501268445310:key/46edbfa5-2d75-427a-bd61-ed6342567ad5",
                "throughput": 0,
                "volume_id": "vol-0d82a41d8ffba1de0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f88152df1f116a59",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-0"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f7e0d5ee7552c01"
            ]
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ec2-api[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c503d55a14d7a5f0",
            "arn": "arn:aws:ec2:us-east-1:501268445310:instance/i-025c553704210662e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025c553704210662e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "express-api-1_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0691dabf121e40629",
            "private_dns": "ip-10-0-1-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_ip": "44.195.49.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:501268445310:key/46edbfa5-2d75-427a-bd61-ed6342567ad5",
                "throughput": 0,
                "volume_id": "vol-0ecfd054c2000d204",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-01d6b36acd0e0927d",
            "tags": {
              "CreatedBy": "terraform",
              "Name": "express-api-1"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Name": "express-api-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f7e0d5ee7552c01"
            ]
          },
          "dependencies": [
            "module.active-network.aws_security_group.ec2",
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ec2-api.aws_key_pair.key_pair",
            "module.active-network.module.ec2-api.data.aws_ami.amazon-linux-2",
            "module.active-network.module.ec2-api.tls_private_key.key_pair",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route.default",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_route_table_association.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.ig",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:internet-gateway/igw-09d9e196a3a1ad8f9",
            "id": "igw-09d9e196a3a1ad8f9",
            "owner_id": "501268445310",
            "tags": {
              "Name": "ig-redes"
            },
            "tags_all": {
              "Name": "ig-redes"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078939970cd0871cb",
            "association_id": "eipassoc-08423d1e3340a68a6",
            "domain": "vpc",
            "id": "eipalloc-078939970cd0871cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e1a2d0e9a24663db",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_ip": "10.0.2.40",
            "public_dns": "ec2-52-200-98-199.compute-1.amazonaws.com",
            "public_ip": "52.200.98.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-nat-gw-0"
            },
            "vpc": true
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078939970cd0871cb",
            "association_id": "eipassoc-08423d1e3340a68a6",
            "connectivity_type": "public",
            "id": "nat-004a7a460e6d3f38f",
            "network_interface_id": "eni-0e1a2d0e9a24663db",
            "private_ip": "10.0.2.40",
            "public_ip": "52.200.98.199",
            "subnet_id": "subnet-0cd183e85bb376bd2",
            "tags": {
              "Name": "nat-gw-0"
            },
            "tags_all": {
              "Name": "nat-gw-0"
            }
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030ce802c05196ed9",
            "association_id": "eipassoc-0d6dde5f028e114f6",
            "domain": "vpc",
            "id": "eipalloc-030ce802c05196ed9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04929e4ef684af02c",
            "private_dns": "ip-10-0-3-126.ec2.internal",
            "private_ip": "10.0.3.126",
            "public_dns": "ec2-52-204-81-35.compute-1.amazonaws.com",
            "public_ip": "52.204.81.35",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-nat-gw-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.nat_gw[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030ce802c05196ed9",
            "association_id": "eipassoc-0d6dde5f028e114f6",
            "connectivity_type": "public",
            "id": "nat-0c10cfa7b485002f0",
            "network_interface_id": "eni-04929e4ef684af02c",
            "private_ip": "10.0.3.126",
            "public_ip": "52.204.81.35",
            "subnet_id": "subnet-0df1bafb42136a890",
            "tags": {
              "Name": "nat-gw-1"
            },
            "tags_all": {
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0528fabd3d336c7de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-004a7a460e6d3f38f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0528fabd3d336c7de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-0528fabd3d336c7de",
            "id": "rtb-0528fabd3d336c7de",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004a7a460e6d3f38f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5c05834a29798f5",
            "route_table_id": "rtb-0528fabd3d336c7de",
            "subnet_id": "subnet-0f88152df1f116a59"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-0f88152df1f116a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f88152df1f116a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b8ed95e2ddf737a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c10cfa7b485002f0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8ed95e2ddf737a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.nat_gw.aws_eip.nat",
            "module.active-network.module.nat_gw.aws_nat_gateway.this",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route.default",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_route_table_association.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-0b8ed95e2ddf737a0",
            "id": "rtb-0b8ed95e2ddf737a0",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c10cfa7b485002f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030d0ce7be4b06462",
            "route_table_id": "rtb-0b8ed95e2ddf737a0",
            "subnet_id": "subnet-01d6b36acd0e0927d"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.private-subnets.aws_route_table.this",
            "module.active-network.module.private-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.private-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-01d6b36acd0e0927d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d6b36acd0e0927d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d9e196a3a1ad8f9",
            "id": "r-rtb-0065dfcd5a4e474191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0065dfcd5a4e47419",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-0065dfcd5a4e47419",
            "id": "rtb-0065dfcd5a4e47419",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d9e196a3a1ad8f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1a3aa09441e744c",
            "route_table_id": "rtb-0065dfcd5a4e47419",
            "subnet_id": "subnet-0cd183e85bb376bd2"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-0cd183e85bb376bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd183e85bb376bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d9e196a3a1ad8f9",
            "id": "r-rtb-07f9d0c34d017d4781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f9d0c34d017d478",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.ig.aws_internet_gateway.this",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:route-table/rtb-07f9d0c34d017d478",
            "id": "rtb-07f9d0c34d017d478",
            "owner_id": "501268445310",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d9e196a3a1ad8f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6285a06228228b5",
            "route_table_id": "rtb-07f9d0c34d017d478",
            "subnet_id": "subnet-0df1bafb42136a890"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.public-subnets.aws_route_table.this",
            "module.active-network.module.public-subnets.aws_subnet.this",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.public-subnets[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:subnet/subnet-0df1bafb42136a890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df1bafb42136a890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501268445310",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0a73be88dd7ce7526"
          },
          "dependencies": [
            "module.active-network.data.aws_availability_zones.available",
            "module.active-network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.active-network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.active-network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501268445310:vpc/vpc-0a73be88dd7ce7526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05816943481518208",
            "default_route_table_id": "rtb-0bc9feacffe1be54f",
            "default_security_group_id": "sg-011d51320bbe72775",
            "dhcp_options_id": "dopt-0469a9fd567806c8d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a73be88dd7ce7526",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc9feacffe1be54f",
            "owner_id": "501268445310",
            "tags": {
              "Name": "redes-vpc"
            },
            "tags_all": {
              "Name": "redes-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}